Fix STATIC_ROOT and update render.yaml

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 JWT_SIGNING_KEY=5uPP3r-l0ng-r4nd0m-str1ng-Fr0m-Python-secrets
+DATABASE_URL=postgres://database_finalproject_user:TFDjk8wNLzyKg5mYb4O18qpuARuzaIBi@dpg-d0f80padbo4c73bn3gag-a:5432/database_finalproject
