--- a/app_frontend/.env
+++ b/app_frontend/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://reccomend-dorm-around-tu-product.onrender.com/api/
+NEXT_PUBLIC_API_URL=https://reccomend-dorm-around-tu-product.onrender.com/api
