Initial push with working frontend and backend

--- a/app_frontend/.env
+++ b/app_frontend/.env
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_API_URL=https://reccomend-dorm-around-tu-product.onrender.com/api/
+#NEXT_PUBLIC_API_URL=https://reccomend-dorm-around-tu-product.onrender.com/api/
+NEXT_PUBLIC_API_URL=http://localhost:3341
+NEXT_PUBLIC_API_URL_USER=http://localhost:3342
